Fri Dec  6 15:24:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_start_internal, rb_gc): do not need
	  heap_pages_free_unused_pages() here.
	  It was done in after_sweep().

	* gc.c (rb_gc): The reason is now GPR_FLAG_CAPI.

Fri Dec  6 14:05:19 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_start_internal): GC.start() now accepts two optional
	  keyword arguments. These can be used to disable full_mark (minor
	  mark only) or disable immediate_sweep (use lazy sweep). These new
	  options are useful for benchmarking GC behavior, or performing minor
	  GC out-of-band.
	* test/ruby/test_gc.rb (class TestGc): tests for new options.

Fri Dec  6 11:51:28 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/erb.rb: [DOC] fix broken link, Use rubygems.org and www.ruby-toolbox.com instead of RAA.
	  [Bug #9197]

Fri Dec  6 10:50:54 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/webrick/httprequest.rb: [DOC] Fix broken link of CGI specification by @udzura [fix GH-466]

Thu Dec  6 01:27:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec):
	  treat 0.0 and -0.0 of floating-point numbers specially for an optimization
	  and to correctly propagate its signbit to the result.
	  [Bug #9214] [ruby-core:58858]

	* test/bigdecimal/test_bigdecimal.rb: add tests case for the above change.

	* test/bigdecimal/test_bigdecimal_util.rb: ditto.

Thu Dec  5 22:18:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (configuration): strip destdir part from prefix to get
	  rid of duplication.  a patch by arton at [ruby-core:58859].
	  [ruby-core:58856] [Bug #9213]

Thu Dec  5 21:53:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_or): lhs elements are prefered, so should not
	  replace with rhs elements.

	* test/ruby/test_array.rb (test_OR_in_order): import the test failed
	  by r43969 from rubyspec/core/array/union_spec.rb.

Thu Dec  5 21:05:42 2013  Koichi Sasada  <ko1@atdot.net>
